fix nested overlay transition so it doesn't jump on transition end

--- a/scss/components/_off-canvas.scss
+++ b/scss/components/_off-canvas.scss
@@ -298,7 +298,7 @@ $maincontent-class: 'off-canvas-content' !default;
 
   // No transform on overlap transition
   @at-root .#{$maincontent-class}.has-transition-overlap[class*="is-open"] {
-    transform: none;
+    transform: translate(0, 0);
   }
 }
 
